[package]
name = "awair-monitor"
version = "0.1.0"
authors = ["Olly Legg <olly@51degrees.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
envconfig = "0.8.0"
envconfig_derive = "0.8.0"
failure = "0.1.8"
influxdb = { version = "0.1.0" }
log = "0.4.11"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
